# MappingBot

./: .gitignore  README.md
src/my_bot/: CMakeLists.txt  package.xml  setup.py
src/my_bot/config/: diff_drive_controller.yaml  ekf.yaml  mapper_params_online_async.yaml  slam_params.yaml
src/my_bot/description/: gazebo_control.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  ros2_control.yaml
src/my_bot/launch/: digital_sim.launch.py  launch_sim.launch.py  nav2_ultrasonic.launch.py  robot.launch.py  test.launch.py  turtlesim_mimic_launch.py
src/my_bot/maps/: my_room_map.pgm  my_room_map.yaml
src/my_bot/nav2_ultrasonic/config/: nav2_params.yaml
src/my_bot/scripts/: drive_distance.py  motor_encoder.py  motor_encoder_lidar.py  robot_serial_bridge.py  servo_lidar.py
src/my_bot/ultrasonic_slam/: ultrasonic_slam_node.py
