cmake_minimum_required(VERSION 3.8)
project(my_bot)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)

# --- INSTALL PYTHON SCRIPTS (nodes) ---
install(
  PROGRAMS
    scripts/motor_encoder_lidar.py   # your node
  DESTINATION lib/${PROJECT_NAME}
)

# --- INSTALL OTHER DIRECTORIES ---
install(
  DIRECTORY
    launch
    description
    config
  DESTINATION share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
